Chart overflow bug

--- a/app/src/components/TotalMarketcapWidget/TotalMarketcapWidget.scss
+++ b/app/src/components/TotalMarketcapWidget/TotalMarketcapWidget.scss
@@ -78,6 +78,10 @@
       text-decoration: underline;
     }
   }
+
+  & svg:not(:root) {
+    overflow: visible;
+  }
 }
 @keyframes loading {
   0% {
